Added TechSageHub Logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">
-                <img src="../AbdulMannanPortfolio/assets/img/techsagehub_logo_official.png" alt="TechsageHub Logo"
+                <img src="assets/img/techsagehub_logo_official.png" alt="TechsageHub Logo"
                     style="height: 32px; border-radius: 4px;">
                 Techsage<span>Hub</span>
             </a>
