Added sasham catering service live demo link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/img/techsagehub_logo_official.png" type="image/x-icon">
 
 </head>
 
@@ -417,7 +418,7 @@
                                     style="font-size:0.6rem;">UI/UX</span></div>
                         </div>
                         <div class="project-actions">
-                            <a href="https://sashamcatering.vercel.app/" target="_blank"
+                            <a href="https://sasham-catering-service-website.vercel.app/" target="_blank"
                                 class="btn-project-action primary">Live Demo</a>
                             <a href="https://github.com/TechSageHub?tab=repositories" target="_blank"
                                 class="btn-project-action outline"><i class="fab fa-github"></i> Code</a>
