fix: properly set alt attribute for Microsoft certificate image in index.html

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="cert-gallery">
                 <div class="cert-card-unique">
                     <div class="cert-display">
-                        <img src="assets/img/microsoft_certificate.png"> alt="Foundational C#">
+                        <img src="assets/img/microsoft_certificate.png" alt="Foundational C#">
                     </div>
                     <div class="cert-content">
                         <h4 style="font-size:1.4rem; margin-bottom:10px;">Foundational C#</h4>
