--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
                 </p>
                 <div class="hero-btns">
                     <a href="#work" class="btn-obsidian">Explore My Work</a>
-                    <a href="#contact"
-                        style="color:var(--text-main); text-decoration:none; font-weight:700; display:flex; align-items:center; gap:10px; margin-left: 20px;">Get
-                        In Touch <i class="fas fa-arrow-right"></i></a>
+                    <a href="assets/docs/CV_Ilyas_Abdul_Mannan.pdf" download class="btn-obsidian"
+                        style="background: transparent; border: 2px solid var(--accent-primary); color: var(--accent-primary) !important; box-shadow: none; margin-left: 15px;">
+                        Download CV <i class="fas fa-download" style="margin-left: 8px;"></i>
+                    </a>
                 </div>
             </div>
             <div class="hero-visual">
