feat: Add meta tags for improved SEO and social media sharing.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ilyas Abdul Mannan | Full Stack Software Developer</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Ilyas Abdul Mannan | Full Stack Software Developer">
+    <meta name="description"
+        content="Full Stack Software Engineer specializing in .NET development. Architecting robust, scalable applications with clean architecture.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://techsagehub.netlify.app/">
+    <meta property="og:title" content="Ilyas Abdul Mannan | Full Stack Software Developer">
+    <meta property="og:description"
+        content="Full Stack Software Engineer specializing in .NET development. Architecting robust, scalable applications with clean architecture.">
+    <meta property="og:image" content="https://techsagehub.netlify.app/assets/img/techsagehub_logo_official.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://techsagehub.netlify.app/">
+    <meta property="twitter:title" content="Ilyas Abdul Mannan | Full Stack Software Developer">
+    <meta property="twitter:description"
+        content="Full Stack Software Engineer specializing in .NET development. Architecting robust, scalable applications with clean architecture.">
+    <meta property="twitter:image" content="https://techsagehub.netlify.app/assets/img/techsagehub_logo_official.png">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
