feat: Introduce new portfolio design by adding `style.css`, deleting `design.html`, and updating `index.html`.

--- a/index.html
+++ b/index.html
@@ -112,32 +112,73 @@
                 <!-- Large Skill Overview Card -->
                 <div class="bento-item grid-arsenal">
                     <div class="arsenal-header">
-                        <h3><i class="fas fa-microchip"></i> Backend Mastery</h3>
-                        <span style="color:var(--text-muted); font-weight:700;">2+ YEARS XP</span>
+                        <h3><i class="fas fa-layer-group"></i> Tech Arsenal</h3>
+                        <span style="color:var(--text-muted); font-weight:700;">3+ YEARS XP</span>
                     </div>
 
-                    <div class="proficiency-bar">
-                        <div class="bar-meta"><span>ASP.NET Core / .NET 9</span> <span>95%</span></div>
-                        <div class="bar-track">
-                            <div class="bar-fill" data-width="95%" style="width: 0%;"></div>
+                    <!-- .NET & Backend Ecosystem -->
+                    <div class="skill-category">
+                        <div class="category-title">
+                            <div class="category-icon"><i class="fas fa-microchip"></i></div>
+                            .NET & Backend Ecosystem
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>C# / .NET / ASP.NET Core</span> <span>95%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="95%" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>Entity Framework Core</span> <span>90%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="90%" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>REST APIs / Cloudinary</span> <span>85%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="85%" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>Unit Testing / Serilog</span> <span>80%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="80%" style="width: 0%;"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="proficiency-bar">
-                        <div class="bar-meta"><span>EF Core & PostgreSQL</span> <span>90%</span></div>
-                        <div class="bar-track">
-                            <div class="bar-fill" data-width="90%" style="width: 0%;"></div>
+
+                    <!-- Web Frontline -->
+                    <div class="skill-category">
+                        <div class="category-title">
+                            <div class="category-icon"><i class="fas fa-globe"></i></div>
+                            Web Frontline
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>JavaScript / HTML / CSS</span> <span>90%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="90%" style="width: 0%;"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="proficiency-bar">
-                        <div class="bar-meta"><span>Blazor WebAssembly</span> <span>85%</span></div>
-                        <div class="bar-track">
-                            <div class="bar-fill" data-width="85%" style="width: 0%;"></div>
+
+                    <!-- Database & Dev Tools -->
+                    <div class="skill-category">
+                        <div class="category-title">
+                            <div class="category-icon"><i class="fas fa-database"></i></div>
+                            Database & Dev Tools
                         </div>
-                    </div>
-                    <div class="proficiency-bar">
-                        <div class="bar-meta"><span>Microservices & REST APIs</span> <span>88%</span></div>
-                        <div class="bar-track">
-                            <div class="bar-fill" data-width="88%" style="width: 0%;"></div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>SQL Server / PostgreSQL</span> <span>90%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="90%" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                        <div class="proficiency-bar">
+                            <div class="bar-meta"><span>Git / GitHub Actions</span> <span>85%</span></div>
+                            <div class="bar-track">
+                                <div class="bar-fill" data-width="85%" style="width: 0%;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -201,9 +242,9 @@
                         </div>
                         <div class="tech-icon-label" style="bottom: 20%; right: 5%;">
                             <div class="tech-icon">
-                                <i class="fab fa-node-js"></i>
+                                <i class="fab fa-github"></i>
                             </div>
-                            <span>Node.js</span>
+                            <span>Git</span>
                         </div>
                         <div class="tech-icon-label" style="bottom: 2%; left: 50%; transform: translateX(-50%);">
                             <div class="tech-icon">
@@ -234,8 +275,11 @@
                     <h3 style="font-size:1.1rem; margin-bottom:15px;"><i class="fas fa-toolbox"></i> Core Tech Tools
                     </h3>
                     <div style="display:flex; flex-wrap:wrap; gap:10px;">
-                        <span class="tech-tag">Git / GitHub</span>
+                        <span class="tech-tag">Git / GitHub Actions</span>
+                        <span class="tech-tag">REST APIs</span>
                         <span class="tech-tag">Cloudinary</span>
+                        <span class="tech-tag">Unit Testing</span>
+                        <span class="tech-tag">Serilog</span>
                         <span class="tech-tag">Swagger</span>
                         <span class="tech-tag">Docker</span>
                     </div>
@@ -279,6 +323,32 @@
                                 </li>
                                 <li><i class="fas fa-check-circle"></i> Developed specialized middleware for
                                     cross-platform data synchronization.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Internship Role -->
+                <div class="timeline-event">
+                    <div class="event-dot"></div>
+                    <div class="event-card">
+                        <div class="event-header">
+                            <div class="event-title">
+                                <h3>Backend Developer Intern</h3>
+                                <span class="event-company">Contech, Lagos</span>
+                            </div>
+                            <span class="event-date">09/2025 – 12/2025</span>
+                        </div>
+                        <div class="event-body">
+                            <ul>
+                                <li><i class="fas fa-check-circle"></i> Assisted senior developers in debugging and
+                                    resolving backend defects, improving API stability.</li>
+                                <li><i class="fas fa-check-circle"></i> Participated in code reviews and team meetings
+                                    to gain insights into <strong>Clean Architecture</strong> and database design.</li>
+                                <li><i class="fas fa-check-circle"></i> Contributed to the development of RESTful
+                                    endpoints using <strong>C#, .NET, and PostgreSQL</strong>.</li>
+                                <li><i class="fas fa-check-circle"></i> Wrote unit tests to verify the functionality of
+                                    backend services and ensure code quality.</li>
                             </ul>
                         </div>
                     </div>
